# mimic

./: .gitignore  CLI_SPEC.md  LICENSE  README.md  pyproject.toml
designs/: gallup_remote_covid_battery_anchor.json  gallup_wellbeing_battery_anchor.json  w154_diff1_battery_anchor.json  w157_skillimp_hybrid.json  w157_skillimp_latent.json  w157_skillimp_latent_anchor.json  w157_skillimp_response_style.json  w157_skillimp_response_style_n192.json  w158_ccpolicy_battery_anchor.json  w163_sm9_battery_anchor.json
examples/: mini_metadata.json
mimic/: __init__.py  artifacts.py  calibration.py  cli.py  cli_parser.py  ep_commands.py  errors.py  evaluation.py  jsonlio.py  metadata.py  parsing.py  state.py  support_designs.py
tests/: test_mimic_cli.py
